<resources>
    <string name="app_name">Platzigram</string>
    <string name="hint_user">Nombre de Usuario</string>
    <string name="hint_pass">Contraseña</string>
    <string name="not_have_account">¿No tienes cuenta? ,</string>
    <string name="create_account">crea una aquí</string>
    <string name="text_login">LOGIN</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_new_user">Usuario</string>
    <string name="hint_confim_pass">Confirmar Contraseña</string>
    <string name="text_new_account">CREAR CUENTA</string>
    <string name="title_toolbar_newAccount">Crear Cuenta</string>
    <string name="text_name_cardview">Bryan Rodríguez</string>
    <string name="text1_time_cardview">Hace</string>
    <string name="text2_time_cardview">4 días</string>
    <string name="text_likes_cardview">10 Me gusta</string>

    <string name="text_tab_home">Home</string>
    <string name="text_tab_search">Buscar</string>
    <string name="text_tab_profile">Perfil</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_title">Titulo prueba para imagenes</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipiscing elit, molestie justo orci curabitur enim sapien urna, aptent litora diam mus libero nunc. Nec integer volutpat venenatis tempus enim dapibus mauris, feugiat ultrices malesuada semper ac felis commodo, est sodales luctus pulvinar nascetur orci. Pretium tincidunt fermentum mollis cras per fusce purus, hac sem orci primis id consequat, mattis tellus conubia gravida vulputate nulla. Felis suscipit potenti est nibh nullam mi, nisi torquent non maecenas ligula himenaeos, per facilisis netus ullamcorper a. Aenean mi netus montes curabitur neque tempus quisque commodo hendrerit potenti, turpis libero risus auctor dictum magnis cum porta congue, semper felis ultrices nunc a lacus cras eleifend lacinia. Penatibus volutpat ut ornare gravida id morbi iaculis phasellus dui litora facilisi varius quam, class arcu risus quisque elementum potenti inceptos netus commodo platea placerat curae, nec vulputate tempus fusce aliquam aliquet parturient vestibulum enim convallis sodales ultricies. Cubilia dapibus mauris diam eleifend sociosqu leo, donec fames nascetur dis nibh, augue quam feugiat lectus dui.</string>
</resources>
